--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,8 @@ name = "wasm-sleep"
 version = "0.1.0"
 edition = "2021"
 
-#[lib]
-#name = "wasm_sleep"
-#crate-type = ["cdylib"]
+[lib]
+crate-type = ["cdylib", "lib"]
 
 [dependencies]
 wasm-bindgen = "*"
